--- a/code/report.rmd
+++ b/code/report.rmd
@@ -37,8 +37,13 @@ FAIR, Free and Open are conflicting concepts regarding data sharing. The differe
 
 ## Introduction
 
+Throughout the Covid-19 pandemic, genomic science was lauded as pursuing a utopian vision of global scientific co-ordination and collaboration in order to discover solutions for vaccines, hospital protocols and pathogen genetic mutations. While in many ways, the increased volume, velocity and variety of genomic data sharing that happened in the height of the pandemic did indeed enable a fast track to SARS-Cov-2 solutionism, it is difficult to untangle the fields historical - and present - associations with both European and North American imperialism. Imperialist practices in genomic science embrace socio-scientifc paternalism, the invisibility of labour through the means of technology, and the dissonance among previously colonised countries and their colonising counterparts in building transparent data governance strategies. Such issues affect the vernacularisation of genomic science, the translation of data into knowledge and the way in which technology is deployed. This paper will explore the imperial legacies of genomic science and how such issues are manifested through a comparison of two case studies which highlight confounding data governance strategies: (1) The Global Initiative on Sharing Avian Flu Data (GISAID) and (2) the European Molecular Biology Laboratory. 
 
-Epistemic diversity is generally agreed among social epistemologists as a means of producing new scientific theories (creativity) and challenging existing scientific paradigms (dissent). As a theory, epistemic diversity has been popularised by feminist philosophy of science discourse who dismiss the lassier faire approach – also known as the the invisible hand where no intervention in increasing diversity is thought necessary. The two factors of creativity and dissent bevel the possibilities of knowledge generation in a pluralistic fashion by altering the discourse surrounding accepted or normative scientific theories and practices (Solomon 2007). Firstly, dissent, challenges the hegemony of a particular scientific theory or practice by offering an altered projection of theories or strategises worth pursing. This can happen in a number of ways such as through criticism (Mill,Popper, Feyerband Longino), division of cognitive labour (Kitcher, Solomon), and distribution of knowledge (Harraway, Longino). Secondly, creativity, broadens the range of what count as legitimate scientific theories and practices by introducing new ideas, methods, and perspectives. This approach has been explored in Open Science initiatives by identifying the number of factors in which can shape a diverse Open Science project. These include, but are not limited to a diversification of methods, characteristics of researchers, funding, geo-political location and intellectual property regimes (Leonelli 2021). Both dissent and creativity are important in epistemic diversity because they help to create a space for alternative ways of knowing and doing science. By introducing new ideas and methods, epistemic diversity challenges the hegemony of traditional science and opens up new possibilities for knowledge generation (Ghosh 2021;Menezes de Souza 2021).
+The way in which genomic data is governed during a pandemic can have profound implications for how the science is used, and by whom. The SARS-CoV-2 pandemic has seen a dramatic increase in the use of genomic data, with new initiatives such as the Global Initiative on Sharing All Influenza Data (GISAID) platform being established to facilitate sharing. However, there are concerns that this increased sharing may not be inclusive or diverse enough, and that existing inequalities could be exacerbated. This paper will critically examine the governance of genomic data during the SARS-CoV-2 pandemic, with a focus on inclusion and diversity. It will consider the role of different actors in data sharing, including national governments, international organisations and private companies. It will also examine the challenges involved in ensuring that all countries have access to genomic data, and that this data is representative of the global population.
+
+> # FAIR princples
+> - yes
+
 
 
 <b>What are they various data sharing strategies? </b>
