--- a/writing/data-provenance.rmd
+++ b/writing/data-provenance.rmd
@@ -14,9 +14,10 @@ output:
 
 ## Introduction
 
-Data provenance (often referenced as data-lineage) is defined as the: "record trail that accounts for the origin of a piece of data (in a database, document or repository) together with an explanation of how and why it got to the present place" (Gupta 2009). Data provenance is thereby concerned with tracking the inputs and outputs of computational processes (programs or scripts) that manipulate data across space and time. In academia, data provenance has been formally studied throughout the database community since the early 2000s and at present marks itself an important component to both Open Science and Open Government research and technological policy formulation (Yogesh et al. 2005, Leonelli 2019,Leonelli 2020). The TRUST Principles for digital repositories directly associates data provenance with data responsibility, arguing that it "greatly enhances the discoverability and usefulness of the data" (Lin et al. 2020). 
+Data provenance (often referenced as data-lineage) is defined as the: "record trail that accounts for the origin of a piece of data (in a database, document or repository) together with an explanation of how and why it got to the present place" (Gupta 2009). Data provenance is thereby concerned with tracking the inputs and outputs of computational processes (programs or scripts) that manipulate data across space and time. In academia, data provenance has been formally studied throughout the database community since the early 2000s and at present marks itself an important component to both Open Science and Open Government research and technological policy formulation (Yogesh et al. 2005, Leonelli 2019,Leonelli 2020). The TRUST Principles for digital repositories directly associates data provenance with data responsibility, arguing that it "greatly enhances the discoverability and usefulness of the data" (Lin et al. 2020).  In the context of SARS-CoV-2 genome sharing, data provenance  ensures that the data adheres to not only quality standards but also ethical and legal obligations. This includes ensuring that the genomes are correctly attributed, linked to metadata records (i.e., a description of how and when the genome was sequenced), and can be tracked through time for further analysis should new findings emerge from future studies. 
 
-In the context of SARS-CoV-2 genome sharing, data provenance would allow scientists to track where each piece of genomic data came from, who created it, and when it was last modified. This would help ensure that data is accurately attributed and that any changes made are transparent and traceable.
+
+There is presently no international standard for data provenance; however, there are various perspectives on its definition as well as numerous examples of proposed or implemented systems that track and/or record provenance information throughout a computational process (Moreau et al. 2012). Following these perspectives, we argue that data provenance in SARS-CoV-2 genomics encompasses three core components: \textit{(1)} accurate attribution denoting who produced the dataset; \textit{(2)} associated metadata describing when, where, under what circumstances it was collected; \textit{(3)} an audit trail detailing all transformations applied to the dataset during processing from sampling until sharing. In this section we briefly review how these three elements have been treated within existing practices of genomic sequence sharing in order to discuss both their benefits as well as limitations with respect to comprehensive treatment of SARS-CoV-2 genomes being shared within open repositories such as GISAID (https://www.gisaid.org/). 
 
 ## Methods
 
