--- a/writing/data-provenance.rmd
+++ b/writing/data-provenance.rmd
@@ -14,10 +14,17 @@ output:
 
 ## Introduction
 
-Data provenance (often referenced as data-lineage) is defined as the: "record trail that accounts for the origin of a piece of data (in a database, document or repository) together with an explanation of how and why it got to the present place" (Gupta 2009). Data provenance is thereby concerned with tracking the inputs and outputs of computational processes (programs or scripts) that manipulate data across space and time. In academia, data provenance has been formally studied throughout the database community since the early 2000s and at present marks itself an important component to both Open Science and Open Government research and technological policy formulation (Yogesh et al. 2005, Leonelli 2019,Leonelli 2020). The TRUST Principles for digital repositories directly associates data provenance with data responsibility, arguing that it "greatly enhances the discoverability and usefulness of the data" (Lin et al. 2020).  In the context of SARS-CoV-2 genome sharing, data provenance  ensures that the data adheres to not only quality standards but also ethical and legal obligations. This includes ensuring that the genomes are correctly attributed, linked to metadata records (i.e., a description of how and when the genome was sequenced), and can be tracked through time for further analysis should new findings emerge from future studies. 
+Data provenance (often referenced as data-lineage) is defined as the: "record trail that accounts for the origin of a piece of data (in a database, document or repository) together with an explanation of how and why it got to the present place" (Gupta 2009). Data provenance is thereby concerned with tracking the inputs and outputs of computational processes (programs or scripts) that manipulate data across space and time. In academia, data provenance has been formally studied throughout the database community since the early 2000s and at present marks itself an important component to both Open Science and Open Government research and technological policy formulation (Leonelli 2019,Leonelli 2020). The TRUST Principles for digital repositories directly associates data provenance with data responsibility, arguing that it "greatly enhances the discoverability and usefulness of the data" (Lin et al. 2020).  In the context of SARS-CoV-2 genome sharing, data provenance  ensures that the data adheres to not only quality standards but also ethical and legal obligations. This includes ensuring that the genomes are correctly attributed, linked to metadata records (i.e., a description of how and when the genome was sequenced), and can be tracked through time for further analysis should new findings emerge from future studies. 
 
 
-There is presently no international standard for data provenance; however, there are various perspectives on its definition as well as numerous examples of proposed or implemented systems that track and/or record provenance information throughout a computational process (Moreau et al. 2012). Following these perspectives, we argue that data provenance in SARS-CoV-2 genomics encompasses three core components: \textit{(1)} accurate attribution denoting who produced the dataset; \textit{(2)} associated metadata describing when, where, under what circumstances it was collected; \textit{(3)} an audit trail detailing all transformations applied to the dataset during processing from sampling until sharing. In this section we briefly review how these three elements have been treated within existing practices of genomic sequence sharing in order to discuss both their benefits as well as limitations with respect to comprehensive treatment of SARS-CoV-2 genomes being shared within open repositories such as GISAID (https://www.gisaid.org/). 
+While there is presently no international standard for data provenance; however, there are various perspectives on its definition as well as numerous examples of proposed or implemented systems that track and/or record provenance information throughout a computational process (Yogesh et al. 2005). 
+Following these perspectives, we argue that data provenance in SARS-CoV-2 genomics encompasses three core components:
+
+- (1) accurate attribution denoting who produced the dataset;
+- (2) associated metadata describing when, where, under what circumstances it was collected; 
+- (3) an audit trail detailing all transformations applied to the dataset during processing from sampling until sharing. 
+
+In the rest of this paper we will explore how these three elements have been treated within existing practices of genomic sequence sharing in order to discuss both their benefits as well as limitations with respect to comprehensive treatment of SARS-CoV-2 genomes being shared within open repositories such as GISAID (https://www.gisaid.org/) and the Covid-19 Data Portal (https://www.covid19dataportal.org/).
 
 ## Methods
 
@@ -215,15 +222,19 @@ In order to access data and metadata records, a manual collection of data and me
 
 ## Results and Discussion
 
-```{r pressurer, echo=FALSE, fig.cap="<b>GISAID Data Provenance Pipeline:</b> A data user will most likely start their journey using the GISAID platform, hosted on highly secure and free/OS software in Germany. From here a data user will need to sign up for the EpiCov3 database which is the primary way to access GISAID data. The EpiCov3 database is hosted on a highly secure, closed software in the United States. Aggregated data is summarised in nine columns which reference the three sub metadata categories. One important thing to notice here, is the direct mapping between the data and metadata. In most cases, a column in the aggreagted data will directly reference and match to a metadata sub category that will contain addtional and often more private information. It should be noted that there also exists one solated metadata category, which contains highly personal information regarding the submitter of the sequence", out.width = '100%'}
+```{r pressurer, echo=FALSE, fig.cap="<b>GISAID Data Provenance Pipeline:</b> A data user will most likely start their journey using the GISAID platform, hosted on highly secure and free/OS software in Germany. From here a data user will need to sign up for the EpiCov3 database which is the primary way to access GISAID data. The EpiCov3 database is hosted on highly secure, closed software in the United States. Aggregated data is summarised in nine columns which reference the three sub metadata categories. One important thing to notice here is the direct mapping between the data and metadata. In most cases, a column in the aggregated data will directly reference and match to a metadata sub category that will contain additional and often more private information. It should be noted that there also exists one isolated metadata category, which contains highly personal information regarding the submitter of the sequence", out.width = '100%'}
 knitr::include_graphics("../plots/gisaid-dppd.png")
 ```
 
-```{r pressure, echo=FALSE, fig.cap="<b>The Covid-19 Data Portal Data Provenance Pipeline:</b> A data user will most likely start their journey using the Covid-19 Data portal, hosted on a fairly secure LAMP stack in the United Kingdom. From here a data user is able to use the data portal to openly query sequence data. However, when they do this request does not come from the Covid-19 Data Portals infractrucutre itself, rather it queries the European Necuolide Archive database and returns back aggreagated data. In order to explore the metadata associated with a seqeunce, the data user will then be redriected to the ENA's app. An important thing to note here, is the dissonance between the aggreagted data names and the associated metadata. While some common labels stay the same e.g. acession ID, many take new names after being pooled to the Covid-19 Data portal e.g. center name (data) -> collection institution (metadata). This linkage stratgey blurs the direct matches and references between the data and the five metadata sub categories. This being said, two of the metadata categories hosted by the ENA contain linked if a sequence has been linked to a particualr study, sample and taxon.", out.width = '100%'}
+```{r pressure, echo=FALSE, fig.cap="<b>The Covid-19 Data Portal Data Provenance Pipeline:</b> A data user will most likely start their journey using the Covid-19 Data portal, hosted on a fairly secure LAMP stack in the United Kingdom. From here a data user is able to use the data portal to openly query sequence data. However, when they do this request does not come from the Covid-19 Data Portals infrastructure itself, rather it queries the European Nucleotide Archive database and returns back aggregated data. In order to explore the metadata associated with a sequence, the data user will then be redirected to the ENA's app. An important thing to note here, is the dissonance between the aggregated data names and the associated metadata. While some common labels stay the same e.g. accession ID, many take new names after being pooled to the Covid-19 Data portal e.g. center name (data) -> collection institution (metadata). This linkage strategy blurs the direct matches and references between the data and the five metadata sub categories. This being said, two of the metadata categories hosted by the ENA contain linked if a sequence has been linked to a particular study, sample and taxon.", out.width = '100%'}
 knitr::include_graphics("../plots/c19dp-dppd.png")
 ```
 
 ## Conclusion
+
+## Acknowledgements
+
+This project has received funding from the European Research Council (ERC) under the European Union’s Horizon 2020 research and innovation programme (grant agreement No. 101001145). This paper reflects only the author's view and that the Commission / Agency is not responsible for any use that may be made of the information it contains.
 
 ## Biblography
 
