update temporal plots and ena corpus plots

--- a/writing/report.rmd
+++ b/writing/report.rmd
@@ -18,7 +18,7 @@ knitr::include_graphics("../plots/dna.png")
 <p style="text-align:center;font-size:3em;margin-bottom:-15vh"> <b>*</b></p>
 
 # Abstract
-FAIR, Free and Open are conflicting concepts regarding data sharing. The differences in these philosophies are exemplified in the case of SARS-Cov2 Nucleotide Sequence databases where all three of these policies have been implemented by a range of institutions. The Global Initiative on Sharing Avian Flu Data (GISAID) have shared virus data through a restricted access repository, the European Molecular Biology Laboratory (EMBL) shared their data under the FAIR principles and the National Center for Biotechnology Information (NCBI) guarantees free and unrestricted access to virus data. We examine each of these databases and discuss their limitations and benefits towards achieving responsible data sharing. In this paper I will argue that the way in which SARS-COV2 genome data has been shared and used reflects a lack of understanding of the ethical implications of such sharing, as well as a failure to consider the unequal power relations between different actors involved in the scientific process. To make this point I will draw on a range of data-centric methodologies, from network visualisation of key actors involved in data sharing policies, network and textual analysis from a large corpus of genomic surveillance papers and a Bayesian nonparametric regression model of institutional diversity indicators. 
+Throughout the Covid-19 pandemic, genomic science was lauded as pursuing a utopian vision of global scientific co-ordination and collaboration in order to discover solutions for vaccines, hospital protocols and pathogen genetic mutations. While in many ways, the increased volume, velocity and variety of genomic data sharing that happened in the height of the pandemic did indeed enable a fast track to SARS-Cov-2 solutionism, it is difficult to untangle the fields historical - and present - associations with both European and North American imperialism. Imperialist practices in genomic science embrace socio-scientifc paternalism, the invisibility of labour through the means of technology, and the dissonance among previously colonised countries and their colonising counterparts in building transparent data governance strategies. Such issues affect the vernacularisation of genomic science, the translation of data into knowledge and the way in which technology is deployed. The way in which genomic data is governed during a pandemic can have profound implications for how the science is used, and by whom. The SARS-CoV-2 pandemic has seen a dramatic increase in the use of genomic data, with initiatives such as the Global Initiative on Sharing All Influenza Data (GISAID) platform and the Covid-19 Data Portal being among the leading in facilitating open sharing. However, there are concerns that this increased sharing may not be inclusive or diverse enough, and that existing inequalities could be exacerbated. This paper will critically examine the governance of genomic data during the SARS-CoV-2 pandemic, with a focus on inclusion and diversity. It will consider the role of different actors in data sharing, including national governments, international organisations and private companies. It will also examine the challenges involved in ensuring that all countries have access to genomic data, and that this data is representative of the global population.
 
 > Supplementary material - including code, data and presentations - can be accessed through the papers github [repository](https://github.com/natesheehan/OPEN-GM/). 
 
@@ -29,7 +29,6 @@ FAIR, Free and Open are conflicting concepts regarding data sharing. The differe
 
 ## Introduction
 
-Throughout the Covid-19 pandemic, genomic science was lauded as pursuing a utopian vision of global scientific co-ordination and collaboration in order to discover solutions for vaccines, hospital protocols and pathogen genetic mutations. While in many ways, the increased volume, velocity and variety of genomic data sharing that happened in the height of the pandemic did indeed enable a fast track to SARS-Cov-2 solutionism, it is difficult to untangle the fields historical - and present - associations with both European and North American imperialism. Imperialist practices in genomic science embrace socio-scientifc paternalism, the invisibility of labour through the means of technology, and the dissonance among previously colonised countries and their colonising counterparts in building transparent data governance strategies. Such issues affect the vernacularisation of genomic science, the translation of data into knowledge and the way in which technology is deployed. The way in which genomic data is governed during a pandemic can have profound implications for how the science is used, and by whom. The SARS-CoV-2 pandemic has seen a dramatic increase in the use of genomic data, with new initiatives such as the Global Initiative on Sharing All Influenza Data (GISAID) platform being established to facilitate sharing. However, there are concerns that this increased sharing may not be inclusive or diverse enough, and that existing inequalities could be exacerbated. This paper will critically examine the governance of genomic data during the SARS-CoV-2 pandemic, with a focus on inclusion and diversity. It will consider the role of different actors in data sharing, including national governments, international organisations and private companies. It will also examine the challenges involved in ensuring that all countries have access to genomic data, and that this data is representative of the global population.
 
 ## Data Goverenance
 
